--- a/.github/workflows/daily-flare-report.yml
+++ b/.github/workflows/daily-flare-report.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         OURA_TOKEN: ${{ secrets.OURA_TOKEN }}
       run: |
-        python enhanced_flare_predictor.py
+        python train.py
         
     - name: Commit and push results
       run: |
