--- a/.github/workflows/daily-flare-report.yml
+++ b/.github/workflows/daily-flare-report.yml
@@ -3,8 +3,11 @@ name: Daily Flare Report
 on:
   schedule:
     # Run at 4 PM EST (9 PM UTC) every day
-    - cron: '0 19 * * *'
+    - cron: '0 21 * * *'
   workflow_dispatch:  # Allows manual triggering
+
+permissions:
+  contents: write  # Add this to allow pushing commits
 
 jobs:
   generate-report:
@@ -13,6 +16,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in token
       
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -21,7 +26,7 @@ jobs:
         
     - name: Install dependencies
       run: |
-        pip install requests pandas numpy scikit-learn plotly python-dotenv
+        pip install requests pandas numpy scikit-learn plotly
         
     - name: Run flare prediction
       env:
